# ecen390

./: README.md  light.mat  m2t2.m  scope_28.csv  scope_30.csv  scope_31.csv
milestone2/: a1.txt  m2t1.m  m2t3.m
milestone3/: Filters.xlsx  b.txt  b_iir.txt  detector.c  filter.c
milestone3/task2/: isr.c  ledTimer.c  lockoutTimer.c  m3_t2_main.c  transmitter.c  trigger.c
milestone3/task3/: CMakeLists.txt  detector.c  filter.c  isr.c  main.c  runningModes.c
